--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,14 +2,11 @@
 
 // component imports
 import MainLayout from "../layouts/MainLayout.astro";
+
 ---
 
-<MainLayout title="My SSMK-Blog" >
+<MainLayout title="About" description="My About Page">
     <a href="/">Home</a>
     <a href="/blog/">Blog</a>
     <a href="/about/">About</a>
-
-<h1>About Me</h1>
-<h2>... and my new Astro site!</h2>
-<p>Hi from SSMK-Blog page</p>
-</MainLayout>
+   
