--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,25 +1,67 @@
 ---
+const pageTitle = "About Me";
+const identity = {
+  firstName: "Sarah",
+  country: "Canada",
+  occupation: "Technical Writer",
+  hobbies: ["photography", "birdwatching", "baseball"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+const happy = true;
+const finished = false;
+const goal = 3;
 
 // component imports
 import MainLayout from "../layouts/MainLayout.astro";
-
 ---
 
-<MainLayout title="About" description="My About Page">
-    <a href="/">Home</a>
-    <a href="/blog/">Blog</a>
-    <a href="/about/">About</a>
+<MainLayout title={pageTitle} description="My About Page">
+  <a href="/">Home</a>
+  <a href="/blog/">Blog</a>
+  <a href="/about/">About</a>
 
-<h1>About Me</h1>
-<h2>... and my new Astro site!</h2>
-<p>Hi from About page</p>
-<h1>My Astro Site</h1>
-  <h1>About Me</h1>
+  <h1>{pageTitle}</h1>
+  <h2>... and my new Astro site!</h2>
+  <p>Hi from About page</p>
+  <h1>My Astro Site</h1>
+  <h1>{pageTitle}</h1>
   <h2>... and my new Astro site!</h2>
 
-  <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
+  <p>
+    I am working through Astro's introductory tutorial. This is the second page
+    on my website, and it's the first one I built myself!
+  </p>
 
-  <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+  <p>
+    This site will update as I complete more of the tutorial, so keep checking
+    back and see how my journey is going!
+  </p>
+  <p>Here are a few facts about me:</p>
+  {happy && <p>I am happy to be learning Astro!</p>}
 
+  {finished && <p>I finished this tutorial!</p>}
+
+  {
+    goal === 3 ? (
+      <p>My goal is to finish in 3 days.</p>
+    ) : (
+      <p>My goal is not 3 days.</p>
+    )
+  }
+  <ul>
+    <li>My name is {identity.firstName}.</li>
+    <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+    {
+      identity.hobbies.length >= 2 && (
+        <li>
+          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
+        </li>
+      )
+    }
+  </ul>
+  <p>My skills are:</p>
+  <ul>
+    {skills.map((skill) => <li>{skill}</li>)}
+  </ul>
 </MainLayout>
-	
