--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,15 @@
 ---
-
+const pageTitle = "Home Page";
 // component imports
 import MainLayout from "../layouts/MainLayout.astro";
 ---
 
-<MainLayout title="My SSMK-Blog" >
+<MainLayout title={pageTitle} description="My Home Page">
     <a href="/">Home</a>
     <a href="/blog/">Blog</a>
     <a href="/about/">About</a>
 
-<h1>About Me</h1>
+<h1>{pageTitle}</h1>
 <h2>... and my new Astro site!</h2>
 <p>Hi from SSMK-Blog page</p>
 </MainLayout>
